UPDATE: Corrigindo entidade cliente