@@ -2,12 +2,14 @@ package br.com.aweb.sistema_vendas.model;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.hibernate.validator.constraints.br.CPF;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import br.com.aweb.sistema_vendas.enums.UsuarioRole;
 import jakarta.persistence.*;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
@@ -74,12 +76,14 @@ public class Cliente implements UserDetails {
     @NotBlank(message = "Senha é obrigatória.")
     private String senha;
 
-    private String role = "ROLE_USER";
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private UsuarioRole role;
 
     // Implementação UserDetails
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(role));
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
@@ -91,9 +95,4 @@ public class Cliente implements UserDetails {
     public String getUsername() {
         return email;
     }
-
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
 }
